--- a/vac-style.css
+++ b/vac-style.css
@@ -181,9 +181,10 @@
               font-size: 120%;
               word-spacing: 3px;
           }
-          @media (max-width:750px){
+          @media (max-width:1100px){
               .container-txt{
                   font-size: 105%;
+                  overflow: hidden;
               }
               .sec-btn{
                   margin-top: 15px;
@@ -215,4 +216,60 @@
                   background-size: cover;
               }
           }
+        .footer{
+            width: 100%;
+            height: 100px;
+            background: #00695c;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+          }
+          .footer::before{
+              content: "";
+              width: 100%;
+              height: 100%;
+              background-image: linear-gradient(to right, #00695c, #00695c),url(images-20200823T122507Z-001/images/footer.png);
+              background-size: cover;
+              background-blend-mode: color;
+              animation: foot 15s infinite;
+          }
+          @keyframes foot{
+              0%{
+                  transform: scale(1);
+              }
+              50%{
+                  transform: scale(1.3);
+              }
+              100%{
+                  transform: scale(1);
+              }
+          }
+          .footer-logo{
+            width: 25%;
+              height: 35px;
+              position: absolute;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              margin: 25px 0px;
+              z-index: 10;  
+              border-bottom: 1px dotted white;
+          }
+          .fab{
+              color: white;
+              font-size: 200%;
+              margin-right: 23px;
+          }
+          .copyright{
+              height: 25px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              background-color: #004D40;
+              font-size: 75%;
+              color: white;
+          }
+          
             
