--- a/vac-style.css
+++ b/vac-style.css
@@ -27,7 +27,7 @@
               display: flex;
               justify-content: flex-end;
               position: fixed;
-             /* background-color: red;*/
+              z-index: 2;
               
           }
           .nav-btn{
@@ -224,7 +224,6 @@
             flex-direction: column;
             align-items: center;
             position: relative;
-            overflow: hidden;
           }
           .footer::before{
               content: "";
@@ -263,6 +262,7 @@
               margin-right: 23px;
           }
           .copyright{
+              width: 100%;
               height: 25px;
               display: flex;
               justify-content: center;
@@ -270,6 +270,7 @@
               background-color: #004D40;
               font-size: 75%;
               color: white;
+              position: absolute;
           }
           
             
